syntax = "proto3";

message SetUnion {
    message Person {
        string id = 1;
        string name = 2;
        double age = 3;
    }
}

message __Main {
    repeated Array.Element_lt__lp_Set_lt_Array_lt_number_gt__gt__space__or__space_Set_lt_SetUnion.Person_gt__space__or__space_Set_lt_boolean_gt__space__or__space_Set_lt_number_gt__space__or__space_Set_lt_string_gt__rp__gt_ value = 1;
}

message Array {
    message Element_lt__lp_Set_lt_Array_lt_number_gt__gt__space__or__space_Set_lt_SetUnion {
        message Person_gt__space__or__space_Set_lt_boolean_gt__space__or__space_Set_lt_number_gt__space__or__space_Set_lt_string_gt__rp__gt_ {
            oneof value {
                Set.Wrapper_lt_string_gt_ value_o0 = 1;
                Set.Wrapper_lt_boolean_gt_ value_o1 = 2;
                Set.Wrapper_lt_number_gt_ value_o2 = 3;
                Set.Wrapper_lt_Array_lt_number_gt__gt_ value_o3 = 4;
                Set.Wrapper_lt_SetUnion.Person_gt_ value_o4 = 5;
            }
        }
    }

    message Element_lt_Array_lt_number_gt__gt_ {
        repeated double value = 1;
    }
}

message Set {
    message Wrapper_lt_string_gt_ {
        repeated string value = 1;
    }

    message Wrapper_lt_boolean_gt_ {
        repeated bool value = 1;
    }

    message Wrapper_lt_number_gt_ {
        repeated double value = 1;
    }

    message Wrapper_lt_Array_lt_number_gt__gt_ {
        repeated Array.Element_lt_Array_lt_number_gt__gt_ value = 1;
    }

    message Wrapper_lt_SetUnion {
        message Person_gt_ {
            repeated SetUnion.Person value = 1;
        }
    }
}